# messenger_analysis

./: .gitignore  README.md  common_words.txt  fbook.py  menus.py  pyproject.toml  requirements.txt
src/messenger_analysis/: __init__.py  cli.py  config.py  data_loader.py  metrics.py  plots.py
tests/: test_imports.py
